Kconfig: Add HAVE_LIBUBI
Allow passing through the environment if libubi is available for the build
target.

Defaults to yes because we do not do any library checking for now.

Signed-off-by: Jörg Krause <joerg.krause@embedded.rocks>

--- a/Kconfig
+++ b/Kconfig
@@ -25,6 +25,10 @@ config HAVE_LIBMTD
 	bool
 	option env="HAVE_LIBMTD"
 
+config HAVE_LIBUBI
+	bool
+	option env="HAVE_LIBUBI"
+
 menu "Swupdate Settings"
 
 menu "General Configuration"
