Kconfig: Add HAVE_ZLIB
Allow passing through the environment if zlib is available for the build
target.

Defaults to yes because we do not do any library checking for now.

Signed-off-by: Jörg Krause <joerg.krause@embedded.rocks>

--- a/Kconfig
+++ b/Kconfig
@@ -29,6 +29,10 @@ config HAVE_LIBUBI
 	bool
 	option env="HAVE_LIBUBI"
 
+config HAVE_ZLIB
+	bool
+	option env="HAVE_ZLIB"
+
 menu "Swupdate Settings"
 
 menu "General Configuration"
