Kconfig: Add HAVE_LIBSSL
Allow passing through the environment if libssl is available for the build
target.

Defaults to yes because we do not do any library checking for now.

Signed-off-by: Jörg Krause <joerg.krause@embedded.rocks>

--- a/Kconfig
+++ b/Kconfig
@@ -33,6 +33,10 @@ config HAVE_ZLIB
 	bool
 	option env="HAVE_ZLIB"
 
+config HAVE_LIBSSL
+	bool
+	option env="HAVE_LIBSSL"
+
 menu "Swupdate Settings"
 
 menu "General Configuration"
