Kconfig: Add HAVE_LIBCRYPTO
Allow passing through the environment if libcrypto is available for the build
target.

Defaults to yes because we do not do any library checking for now.

Signed-off-by: Jörg Krause <joerg.krause@embedded.rocks>

--- a/Kconfig
+++ b/Kconfig
@@ -37,6 +37,10 @@ config HAVE_LIBSSL
 	bool
 	option env="HAVE_LIBSSL"
 
+config HAVE_LIBCRYPTO
+	bool
+	option env="HAVE_LIBCRYPTO"
+
 menu "Swupdate Settings"
 
 menu "General Configuration"
