Kconfig: Add HAVE_JSON_C
Allow passing through the environment if json_c is available for the build
target.

Defaults to yes because we do not do any library checking for now.

Signed-off-by: Jörg Krause <joerg.krause@embedded.rocks>

--- a/Kconfig
+++ b/Kconfig
@@ -41,6 +41,10 @@ config HAVE_LIBCRYPTO
 	bool
 	option env="HAVE_LIBCRYPTO"
 
+config HAVE_JSON_C
+	bool
+	option env="HAVE_JSON_C"
+
 menu "Swupdate Settings"
 
 menu "General Configuration"
