handler: add "archive" handler
Add a handler to extract tarballs using the libarchive
library.

Example in sw-description:

files: (
	{
		filename = "archive.tar.gz";
		type = "archive";
		/* device is mounted automatically by swupdate */
		device = "/dev/mmcblk0p2";
		filesystem = "ext3";
		/* path where the tarball is extracted */
		path = "home/root";
	}
);

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/Makefile.deps
+++ b/Makefile.deps
@@ -6,6 +6,10 @@ ifeq ($(HAVE_LIBCONFIG),)
 export HAVE_LIBCONFIG = y
 endif
 
+ifeq ($(HAVE_LIBARCHIVE),)
+export HAVE_LIBARCHIVE = y
+endif
+
 ifeq ($(HAVE_LIBCURL),)
 export HAVE_LIBCURL = y
 endif
