--- a/Kconfig
+++ b/Kconfig
@@ -17,6 +17,10 @@ config HAVE_LIBCONFIG
 	bool
 	option env="HAVE_LIBCONFIG"
 
+config HAVE_LIBARCHIVE
+	bool
+	option env="HAVE_LIBARCHIVE"
+
 config HAVE_LIBCURL
 	bool
 	option env="HAVE_LIBCURL"
