--- a/handlers/Config.in
+++ b/handlers/Config.in
@@ -82,6 +82,14 @@ config HANDLER_IN_LUA
 	  Allow to write own handlers in LUA.
 	  They are loaded at the start-up.
 
+config ARCHIVE
+	bool "archive"
+	depends on HAVE_LIBARCHIVE
+	default n
+	help
+	  Handler using the libarchive to extract tarballs
+	  into a filesystem.
+
 config UBOOT
 	bool "uboot"
 	depends on HAVE_ZLIB
