--- a/handlers/Makefile
+++ b/handlers/Makefile
@@ -3,6 +3,7 @@
 # not drop the handler if it is not called.
 # Handler can be called dinamically based
 # on the received image type
+obj-$(CONFIG_ARCHIVE) += archive_handler.o
 obj-$(CONFIG_CFI)	+= flash_handler.o
 obj-$(CONFIG_RAW)	+= raw_handler.o
 obj-$(CONFIG_UBIVOL)	+= ubivol_handler.o
