Build error if U-Boot is required without gunzip
libz is not only required by gunzip, but it is
needed for the U-Boot handler, too. Add libz
if the U-Boot handler is configured.

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/Makefile.flags
+++ b/Makefile.flags
@@ -143,6 +143,10 @@ ifeq ($(CONFIG_GUNZIP),y)
 LDLIBS += z
 endif
 
+ifeq ($(CONFIG_UBOOT),y)
+LDLIBS += z
+endif
+
 # If a flat binary should be built, CFLAGS_swupdate="-elf2flt"
 # env var should be set for make invocation.
 # Here we check whether CFLAGS_swupdate indeed contains that flag.
