config parser: add a prefix to the root node
First swupdate version did not set the root node
as "software". To maintain compatibility, let to
configure the root node for sw-description.

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/parser/Config.in
+++ b/parser/Config.in
@@ -8,6 +8,14 @@ config LIBCONFIG
 	  Use libconfig to parse the configuration file.
 	  This is the default parser.
 
+config LIBCONFIGROOT
+	string "Name of root node"
+	depends on LIBCONFIG
+	help
+	  For compatibility reasons, the root node
+	  can be set to something else as "software".
+	  In most case you do not need to set it.
+
 config JSON
 	bool "libjson"
 	default n
