Kbuild: Fix link error for CONFIG_UBOUT and missing libz
CONFIG_UBOOT needs libz [1]. So CONFIG_UBOUT mustn't be available when
HAVE_ZLIB=n.

[1] https://github.com/sbabic/swupdate/commit/cf495e23ad117f4cae9c429e80714fe9c18f2d6a

Reported-by: Romain Naour <romain.naour@openwide.fr>
Signed-off-by: Jörg Krause <joerg.krause@embedded.rocks>

--- a/handlers/Config.in
+++ b/handlers/Config.in
@@ -81,6 +81,7 @@ config HANDLER_IN_LUA
 
 config UBOOT
 	bool "uboot"
+	depends on HAVE_ZLIB
 	default n
 	help
 	  Enable it to change U-Boot environment
