Revert "Kbuild: fix build issue with some toolchains"
This reverts commit c3467290925b2a833a68d9db12c198fdca752e32.

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/core/Makefile
+++ b/core/Makefile
@@ -8,7 +8,7 @@
 #
 # Licensed under GPLv2, see file LICENSE in this source tree.
 
-lib-y += swupdate.o \
+obj-y += swupdate.o \
 	 cpio_utils.o \
 	 gpio.o \
 	 notifier.o \
