Parser: use a single parser for json/libconfig
The parsers share most of code - factorize to
have a single parser code.

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/parser/Makefile
+++ b/parser/Makefile
@@ -1,3 +1,2 @@
-lib-$(CONFIG_LIBCONFIG)		+= parse_config.o
 lib-$(CONFIG_LUAEXTERNAL)	+= parse_external.o
-lib-$(CONFIG_JSON)		+= parse_json.o
+lib-y				+= parser.o
