u-boot: use u-boot library for environment
fwenv.c was copied from the U-Boot project and it is
not anymore synchronized. Instead of that, use fwenv
from the u-boot project.

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/Makefile.flags
+++ b/Makefile.flags
@@ -141,7 +141,7 @@ LDLIBS += z
 endif
 
 ifeq ($(CONFIG_UBOOT),y)
-LDLIBS += z
+LDLIBS += z ubootenv
 endif
 
 # If a flat binary should be built, CFLAGS_swupdate="-elf2flt"
