Revert "u-boot: use u-boot library for environment"
This reverts commit 82bc3460b6eca871e22959c962e3252e421fa0c9.

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/handlers/Makefile
+++ b/handlers/Makefile
@@ -10,4 +10,4 @@ obj-$(CONFIG_UBIVOL)	+= ubivol_handler.o
 obj-$(CONFIG_LUASCRIPTHANDLER) += lua_scripthandler.o
 obj-$(CONFIG_SHELLSCRIPTHANDLER) += shell_scripthandler.o
 obj-$(CONFIG_RAW) += raw_handler.o
-obj-$(CONFIG_UBOOT) += uboot_handler.o
+obj-$(CONFIG_UBOOT) += uboot_handler.o fw_env.o
