--- a/Makefile.flags
+++ b/Makefile.flags
@@ -146,7 +146,7 @@ LDLIBS += z
 endif
 
 ifeq ($(CONFIG_UBOOT),y)
-LDLIBS += z ubootenv
+LDLIBS += z
 endif
 
 # If a flat binary should be built, CFLAGS_swupdate="-elf2flt"
