u-boot: optionally link u-boot library if available
fwenv.c was copied from the U-Boot project and it is
not anymore synchronized. Instead of that, use fwenv
from the u-boot project. This is done just in case
the uboot library is available (mainly in next release).
fw_env.c should be then dropped from swupdate
repository.

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/Makefile.flags
+++ b/Makefile.flags
@@ -147,6 +147,9 @@ endif
 
 ifeq ($(CONFIG_UBOOT),y)
 LDLIBS += z
+ifeq ($(CONFIG_UBOOT_LIBRARY),y)
+LDLIBS += ubootenv
+endif
 endif
 
 # If a flat binary should be built, CFLAGS_swupdate="-elf2flt"
