Build documentation from main Makefile
Allow to build documentation just as target from
Makefile instead of going into doc/ directory.
Run make help for a list of all formats
for the generated documentation.

Signed-off-by: Stefano Babic <sbabic@denx.de>
Reviewed-by: Bjørn Forsman <bjorn.forsman@gmail.com>

--- a/Makefile.help
+++ b/Makefile.help
@@ -25,3 +25,6 @@ help:
 	@echo 'Development:'
 	@echo '  randconfig		- generate a random configuration'
 	@echo
+	@echo 'Documentation:'
+	@make -C doc help
+
