examples: do not overwrite CC by compiling client example
Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/examples/client/Makefile
+++ b/examples/client/Makefile
@@ -2,7 +2,7 @@
 all: client
 
 client: client.c
-	$(CROSS_COMPILE)gcc -g -o client -I../../include client.c ../../ipc/lib.a -lpthread
+	${CC} -g -o client -I../../include client.c ../../ipc/lib.a -lpthread
 
 clean:
 	@rm -f client
