--- a/handlers/Makefile
+++ b/handlers/Makefile
@@ -1,8 +1,8 @@
 # Note: the handlers are inserted automatically
 # via a GCC constructor. To work, the linker should
 # not drop the handler if it is not called.
-# Handler can be called dinamically based
-# on the received image type
+# Handler can be called dynamically based
+# on the received image type.
 obj-$(CONFIG_ARCHIVE) += archive_handler.o
 obj-$(CONFIG_CFI)	+= flash_handler.o
 obj-$(CONFIG_RAW)	+= raw_handler.o
