--- a/corelib/Makefile
+++ b/corelib/Makefile
@@ -3,3 +3,4 @@ lib-y				+= installer.o \
 lib-$(CONFIG_DOWNLOAD)		+= downloader.o
 lib-$(CONFIG_MTD)		+= mtd-interface.o
 lib-$(CONFIG_LUA)		+= lua_interface.o
+lib-$(CONFIG_SIGNED_IMAGES)	+= verify_signature.o
