Allow to configure LUA library version
LUAVERSION can already be used, but there is no way to set it
via menuconfig.

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/Kconfig
+++ b/Kconfig
@@ -102,6 +102,18 @@ config LUA
 comment "Lua support needs a Lua interpreter"
 	depends on !HAVE_LUA
 
+config LUAVERSION
+	string "LUA version"
+	default ""
+	depends on LUA
+	help
+	  Allow to specify which version must be taken. This is useful
+	  in case of multiple versions of the LUA interpreter in the system.
+
+comment "Lua support needs a Lua interpreter"
+	depends on !HAVE_LUA
+
+
 # These are auto-selected by other options
 
 config FEATURE_SYSLOG
