Fix building library if LUA is set
commit 59e4ad80108cefa7370698d8703a95b29611a00d breaks
building swupdate library due to redefine of
the CFLAGS instead of simply adding the new one
for LUA.

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/Makefile.flags
+++ b/Makefile.flags
@@ -97,7 +97,9 @@ LDLIBS += pthread
 ifneq ($(CONFIG_LUA),)
 LDLIBS += lua${CONFIG_LUAVERSION} dl m
 LDFLAGS_swupdate += -Wl,-E
-$(eval $(call pkg_check_modules, KBUILD, lua${CONFIG_LUAVERSION}))
+$(eval $(call pkg_check_modules, LUABUILD, lua${CONFIG_LUAVERSION}))
+KBUILD_CFLAGS += $(LUABUILD_CFLAGS)
+KBUILD_LIBS += $(LUABUILD_LIBS)
 endif
 
 
