gitignore: add some Kconfig build files
Signed-off-by: Jörg Krause <joerg.krause@embedded.rocks>

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,11 @@
 *.o.*
 *.a
 *.s
+scripts/basic/fixdep
+scripts/kconfig/mconf
+scripts/kconfig/zconf.hash.c
+scripts/kconfig/zconf.lex.c
+scripts/kconfig/zconf.tab.c
 
 # 
 swupdate
