Kconfig: Add missing comment for archive support
Commit ddabca7e2f673e570d5466b4f465b556c3164309 adds an archive handler. Add a
comment about missing libarchive if HAVE_LIBARCHIVE is not set.

Signed-off-by: Jörg Krause <joerg.krause@embedded.rocks>

--- a/handlers/Config.in
+++ b/handlers/Config.in
@@ -108,6 +108,9 @@ config ARCHIVE
 	  Handler using the libarchive to extract tarballs
 	  into a filesystem.
 
+comment "archive support needs libarchive"
+	depends on !HAVE_LIBARCHIVE
+
 config UBOOT
 	bool "uboot"
 	depends on HAVE_ZLIB
