--- a/Kconfig
+++ b/Kconfig
@@ -33,6 +33,10 @@ config HAVE_LIBUBI
 	bool
 	option env="HAVE_LIBUBI"
 
+config HAVE_LIBUBOOTENV
+	bool
+	option env="HAVE_LIBUBOOTENV"
+
 config HAVE_ZLIB
 	bool
 	option env="HAVE_ZLIB"
