--- a/handlers/Config.in
+++ b/handlers/Config.in
@@ -113,13 +113,14 @@ comment "archive support needs libarchive"
 
 config UBOOT
 	bool "uboot"
+	depends on HAVE_LIBUBOOTENV
 	depends on HAVE_ZLIB
 	default n
 	help
 	  Enable it to change U-Boot environment
 	  during the installation process.
 
-comment "uboot support needs libz"
+comment "uboot support needs libubootenv, libz"
 	depends on !HAVE_ZLIB
 
 config UBOOT_FWENV
