U-Boot handler cannot be set
Setting HAVE_LIBUBOOTENV is missing in Makefile.deps
and this does not allow to configure the U-Boot handler.

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/Makefile.deps
+++ b/Makefile.deps
@@ -26,6 +26,10 @@ ifeq ($(HAVE_ZLIB),)
 export HAVE_ZLIB = y
 endif
 
+ifeq ($(HAVE_LIBUBOOTENV),)
+export HAVE_LIBUBOOTENV = y
+endif
+
 ifeq ($(HAVE_LIBSSL),)
 export HAVE_LIBSSL = y
 endif
