--- a/Makefile.flags
+++ b/Makefile.flags
@@ -126,6 +126,11 @@ ifneq ($(CONFIG_SIGNED_IMAGES),)
 LDLIBS += crypto ssl
 endif
 
+# signed images require openssl (digest)
+ifneq ($(CONFIG_ENCRYPTED_IMAGES),)
+LDLIBS += crypto ssl
+endif
+
 # mongoose / webserver
 ifneq ($(CONFIG_WEBSERVER),)
 ifneq ($(CONFIG_MONGOOSESSL),)
