handler: Remote Handler
The handler implements a sort of RPC to install
an image with an external program. This is required
in case there is already an installer that cannot be
easy converted to LUA.

The communication to the external program is done
using the zeromq library.

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/Kconfig
+++ b/Kconfig
@@ -37,6 +37,10 @@ config HAVE_LIBUBOOTENV
 	bool
 	option env="HAVE_LIBUBOOTENV"
 
+config HAVE_LIBZEROMQ
+	bool
+	option env="HAVE_LIBZEROMQ"
+
 config HAVE_ZLIB
 	bool
 	option env="HAVE_ZLIB"
