--- a/handlers/Makefile
+++ b/handlers/Makefile
@@ -10,4 +10,5 @@ obj-$(CONFIG_UBIVOL)	+= ubivol_handler.o
 obj-$(CONFIG_LUASCRIPTHANDLER) += lua_scripthandler.o
 obj-$(CONFIG_SHELLSCRIPTHANDLER) += shell_scripthandler.o
 obj-$(CONFIG_RAW) += raw_handler.o
+obj-$(CONFIG_REMOTE_HANDLER) += remote_handler.o
 obj-$(CONFIG_UBOOT) += uboot_handler.o
