--- a/Makefile.deps
+++ b/Makefile.deps
@@ -22,6 +22,10 @@ ifeq ($(HAVE_LIBUBI),)
 export HAVE_LIBUBI = y
 endif
 
+ifeq ($(HAVE_LIBZEROMQ),)
+export HAVE_LIBZEROMQ = y
+endif
+
 ifeq ($(HAVE_ZLIB),)
 export HAVE_ZLIB = y
 endif
