Makefile.flags: added $(PKG)_LDLIBS to pkg_check_modules
This allows LDLIBS to be dynamically supplied with library values
directly from pkg-config.

Signed-off-by: Jordan Yelloz <jordan@yelloz.me>

--- a/Makefile.flags
+++ b/Makefile.flags
@@ -70,6 +70,7 @@ endif
 define pkg_check_modules
 $(1)_CFLAGS := $(shell $(PKG_CONFIG) $(PKG_CONFIG_FLAGS) --cflags $(2))
 $(1)_LIBS := $(shell $(PKG_CONFIG) $(PKG_CONFIG_FLAGS) --libs $(2))
+$(1)_LDLIBS := $(patsubst -l%,%,$(shell $(PKG_CONFIG) $(PKG_CONFIG_FLAGS) --libs-only-l $(2)))
 endef
 
 ifeq ($(CONFIG_STATIC),y)
