--- a/Makefile.flags
+++ b/Makefile.flags
@@ -94,11 +94,11 @@ endif
 LDLIBS += pthread
 # lua
 ifneq ($(CONFIG_LUA),)
-LDLIBS += lua${CONFIG_LUAVERSION} dl m
 LDFLAGS_swupdate += -Wl,-E
-$(eval $(call pkg_check_modules, LUABUILD, lua${CONFIG_LUAVERSION}))
+$(eval $(call pkg_check_modules, LUABUILD, ${CONFIG_LUAPKG}))
 KBUILD_CFLAGS += $(LUABUILD_CFLAGS)
 KBUILD_LIBS += $(LUABUILD_LIBS)
+LDLIBS += $(LUABUILD_LDLIBS)
 endif
 
 
