--- a/corelib/Makefile
+++ b/corelib/Makefile
@@ -1,7 +1,8 @@
 lib-y				+= installer.o \
 				   network_thread.o \
 				   stream_interface.o \
-				   progress_thread.o
+				   progress_thread.o \
+				   parsing_library.o
 lib-$(CONFIG_DOWNLOAD)		+= downloader.o
 lib-$(CONFIG_MTD)		+= mtd-interface.o
 lib-$(CONFIG_LUA)		+= lua_interface.o
