--- a/corelib/Makefile
+++ b/corelib/Makefile
@@ -8,3 +8,4 @@ lib-$(CONFIG_MTD)		+= mtd-interface.o
 lib-$(CONFIG_LUA)		+= lua_interface.o
 lib-$(CONFIG_SIGNED_IMAGES)	+= verify_signature.o
 lib-$(CONFIG_ENCRYPTED_IMAGES)	+= swupdate_decrypt.o
+lib-$(CONFIG_LIBCONFIG)		+= swupdate_settings.o
