Support sha256 even if SIGNED_IMAGES is not set
sha256 is working only if CONFIG_SIGNED_IMAGES  is set.
If a sha256 is added to an artifact, SWUpdate stops
with an error because the interface to the hash
functions are disabled in sslapi.h.

Split hashing and verification adding CONFIG_HASH_VERIFY,
that is automatically set when CONFIG_SIGNED_IMAGES
is enabled.

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/Kconfig
+++ b/Kconfig
@@ -266,9 +266,17 @@ config DOWNLOAD
 comment "Image downloading support needs libcurl"
 	depends on !HAVE_LIBCURL
 
+config HASH_VERIFY
+	bool "Allow to add sha256 hash to each image"
+	depends on HAVE_LIBSSL
+	help
+	  Allow to add a sha256 hash to an artifact.
+	  This is automatically set in case of Signed Image
+
 config SIGNED_IMAGES
 	bool "Enable verification of signed images"
 	depends on HAVE_LIBSSL
+	select HASH_VERIFY
 comment "Image verification (signed images) needs libssl"
 	depends on !HAVE_LIBSSL
 
