suricatta: adapt kconfig to new parselib.h
suricatta must now depend on CONFIG_JSON=y (which depends on
HAVE_JSON_C) so that include/parselib.h does not nullify
JSON functions called by server_hawkbit.c

Signed-off-by: Christian Storm <christian.storm@tngtech.com>
Signed-off-by: Silvano Cirujano Cuesta <silvano.cirujano-cuesta@siemens.com>
Acked-by: Stefano Babic <sbabic@denx.de>

--- a/parser/Config.in
+++ b/parser/Config.in
@@ -25,6 +25,7 @@ config JSON
 	depends on HAVE_JSON_C
 	help
 	  Use json-c to parse the configuration file.
+	  Also required for suricatta's hawkBit Server support.
 
 comment "JSON config parser support needs json-c"
 	depends on !HAVE_JSON_C
