libubootenv: fix defunct CONFIG_UBOOT_FWENV option
libubootenv's functions are all called with NULL as environment option
parameter, hence libubootenv's compile-time configuration for the U-Boot
environment to be used is chosen unconditionally, rendering SWUpdate's
CONFIG_UBOOT_FWENV option void.
Fix this by a default environment option parameter to libubootenv calls
respecting CONFIG_UBOOT_FWENV.

Signed-off-by: Christian Storm <christian.storm@tngtech.com>
Signed-off-by: Silvano Cirujano Cuesta <silvano.cirujano-cuesta@siemens.com>
Acked-by: Stefano Babic <sbabic@denx.de>

--- a/handlers/Config.in
+++ b/handlers/Config.in
@@ -145,8 +145,7 @@ config UBOOT_FWENV
 	default "/etc/fw_env.config"
 	help
 	  This is the file described in U-Boot documentation
-	  in the tools directory. It tells to the user space
-	  where U-Boot environment is saved, that is, on which
-	  MTD device.
+	  in the tools directory. It tells where the U-Boot
+	  environment is saved.
 
 endmenu
