Add functions to handle a dictionary
Add simple functions to store pairs <key, value>
in a list.

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/corelib/Makefile
+++ b/corelib/Makefile
@@ -3,7 +3,8 @@ lib-y				+= installer.o \
 				   stream_interface.o \
 				   progress_thread.o \
 				   parsing_library.o \
-				   artifacts_versions.o
+				   artifacts_versions.o \
+				   swupdate_dict.o
 lib-$(CONFIG_DOWNLOAD)		+= downloader.o
 lib-$(CONFIG_MTD)		+= mtd-interface.o
 lib-$(CONFIG_LUA)		+= lua_interface.o
