Select JSON if suricatta is enabled
If JSON is not enabled, suricatta daemon can be
still selected and this cause a link error.

Select automatically JSON if suricatta will be enabled -
do not let ativate suricatta if HAVE_JSON_C is
not set.

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/Kconfig
+++ b/Kconfig
@@ -288,6 +288,8 @@ comment "Image verification (signed images) needs libssl"
 
 config SURICATTA
 	bool "Enable Suricatta Daemon Mode"
+	depends on HAVE_JSON_C
+	select JSON
 	default n
 	help
 	  Suricatta daemon mode regularly polls a remote server for
