suricatta: do not enable the daemon if no server is selected
Select automatically suricatta only if a server is selected.
This avoids a build issue when JSON is not set.

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/suricatta/Config.in
+++ b/suricatta/Config.in
@@ -1,7 +1,7 @@
 menu "Suricatta"
-depends on SURICATTA
 
 menu "Features"
+depends on SURICATTA
 config SURICATTA_SSL
 	bool "SSL support"
 	default n
@@ -63,9 +63,15 @@ config SURICATTA_HAWKBIT
 	bool "hawkBit support"
 	depends on HAVE_LIBCURL
 	depends on JSON
+	select SURICATTA
 	help
 	  Support for hawkBit server.
 	  https://projects.eclipse.org/projects/iot.hawkbit
+
+config SURICATTA_SERVER_NONE
+	bool "None"
+	help
+	  Do not start suricatta mode
 
 endchoice
 
@@ -79,9 +85,6 @@ config SURICATTA_HAWKBIT_PROXY
 
 comment "hawkBit support needs libcurl and CONFIG_JSON=y"
 	depends on !HAVE_LIBCURL || !JSON
-
-comment "you have to choose one server implementation"
-	depends on !SURICATTA_HAWKBIT
 
 endmenu
 
