--- a/Kconfig
+++ b/Kconfig
@@ -287,13 +287,8 @@ comment "Image verification (signed images) needs libssl"
 	depends on !HAVE_LIBSSL
 
 config SURICATTA
-	bool "Enable Suricatta Daemon Mode"
-	depends on HAVE_JSON_C
-	select JSON
+	bool
 	default n
-	help
-	  Suricatta daemon mode regularly polls a remote server for
-	  updates, downloads, and install them.
 
 source suricatta/Config.in
 
