Update configuration example swupdate.cfg
Change some values from default and add
userid / groupid.

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/examples/configuration/swupdate.cfg
+++ b/examples/configuration/swupdate.cfg
@@ -42,11 +42,13 @@ suricatta :
 	id		= "123456";
 	confirm 	= 0;
 	url 		= "http://patito.fritz.box:8080";
-	polldelay	= 300;
+	polldelay	= 360;
 	nocheckcert	= true;
-	retry		= 3;
+	retry		= 4;
 	retrywait	= 200;
 	loglevel	= 10;
+	userid		= 1000;
+	groupid		= 1000;
 /*
 	cafile		= "/etc/ssl/cafile";
 	sslkey		= "/etc/ssl/sslkey";
@@ -57,4 +59,6 @@ suricatta :
 webserver :
 {
 	document_root = "./www";
+	userid		= 1000;
+	groupid		= 1000;
 };
