Split parselib into a libconfig and libjson parts
This is mainly thought to reduce the number
of #ifdef in the code. Just the files according
to .config are built.

The library is split into a file with general
code (corelib/parsing_library.c) and a file
for each parser that is supported (currently,
libconfig and JSON).

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/corelib/Makefile
+++ b/corelib/Makefile
@@ -10,4 +10,6 @@ lib-$(CONFIG_MTD)		+= mtd-interface.o
 lib-$(CONFIG_LUA)		+= lua_interface.o
 lib-$(CONFIG_HASH_VERIFY)	+= verify_signature.o
 lib-$(CONFIG_ENCRYPTED_IMAGES)	+= swupdate_decrypt.o
-lib-$(CONFIG_LIBCONFIG)		+= swupdate_settings.o
+lib-$(CONFIG_LIBCONFIG)		+= swupdate_settings.o \
+				   parsing_library_libconfig.o
+lib-$(CONFIG_JSON)		+= parsing_library_libjson.o
